--- a/templates/basic.html
+++ b/templates/basic.html
@@ -1,1 +1,21 @@
+<html>
+   <body>      
+      <form action = "http://localhost:5000/tracemyroute" method = "post">
+         
 
+<p>Enter Destination:</p>
+
+
+   
+
+<p><input type = "text" name = "dest" /></p>
+
+
+         
+
+<p><input type = "submit" value = "submit" /></p>
+
+
+      </form>      
+   </body>
+</html>
