--- a/templates/basic.html
+++ b/templates/basic.html
@@ -1,21 +1,38 @@
-<html>
-   <body>      
-      <form action = "http://localhost:5000/tracemyroute" method = "post">
-         
+<!DOCTYPE html>
+<html lang="en">
+<head>
+   <meta charset="UTF-8">
+   <title>Trace My Route</title>
+   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+   </head>
 
-<p>Enter Destination:</p>
+   <script>
+      function draw_map() {
+         var destination = $("#destination").val();
+         $.ajax({
+            url: "/tracemyroute",
+            type: "POST",
+            data: {destination: destination},
+         }).done(function(response) {
+            $.ajax({
+               url: "/map",
+               type: "GET",
+               success: function(html) {
+                  $("#map").append(html);
+               }
+            });
+         });
+      }
+   </script>
 
-
+   <body>
+      <p>
+         Enter destination<br><br>
+         Destination<input type="text" id="destination" name="destination">
+   <br><br>
+         <button id="clicked" onclick="draw_map()">Start Trace</button>
+   </p>
+   <div id="map" class="map" style="width: 1000px; height: 1000px;"></div>
    
-
-<p><input type = "text" name = "dest" /></p>
-
-
-         
-
-<p><input type = "submit" value = "submit" /></p>
-
-
-      </form>      
-   </body>
+</body>
 </html>
