--- a/templates/basic.html
+++ b/templates/basic.html
@@ -39,4 +39,15 @@
          </div>
    
    </body>
+
+   <body>
+      <div id="map" method="GET" action="/map">
+         <div class="container" style="border: 2px solid; max-width: 2000px; max-height: 1000px; padding: 20px;">
+            <div class="row mb-3">
+               <div class="col-2"><b>Trace Route to {destination}:</b></div>
+            </div>
+         </div>
+
+      </div>
+   </body>
 </html>
