updated to add source ip address input

--- a/templates/basic_HTML_stream.html
+++ b/templates/basic_HTML_stream.html
@@ -32,6 +32,9 @@
                <div class="col-2"><b>Enter Destination:</b></div>
                <div class="col-10"><input type="text" id="destination" name="destination" 
                   placeholder="Enter destination" style="width: 100%;"></div>
+                  <div class="col-2"><b>Enter Source IP (leave blank for default):</b></div>
+                  <div class="col-10"><input type="text" id="source" name="source" 
+                     placeholder="Enter source" style="width: 100%;"></div>
             </div>
             <div class="row mb-3">
                <div class="col-2"><button id="clicked" onclick="draw_map()">Start Trace</button></div>
