--- a/templates/basic_HTML_stream.html
+++ b/templates/basic_HTML_stream.html
@@ -4,9 +4,30 @@
    <meta charset="UTF-8">
    <title>Trace My Route</title>
    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-   </head>
+</head>
 
-   <script>
+
+<body>
+    <form method="POST" action="/tracemyroute">
+       <div class="container" style="border: 2px soid; max-width: 500px; padding: 20px;">
+          <div class="row mb-3">
+             <div class="col-2"><b>Enter Destination:</b></div>
+             <div class="col-10"><input type="text" id="destination" name="destination" 
+                placeholder="Enter destination" style="width: 100%;"></div>
+                <div class="col-2"><b>Enter Source IP (leave blank for default):</b></div>
+                <div class="col-10"><input type="text" id="source" name="source" 
+                   placeholder="Enter source" style="width: 100%;"></div>
+          </div>
+          <div class="row mb-3">
+             <div class="col-2"><button id="clicked" onclick="draw_map()">Start Trace</button></div>
+          </div>
+       </div>
+       </form>
+
+    <div id="streamcontent"></div>
+
+
+    <script>
       function draw_map() {
          var destination = $("#destination").val();
          $.ajax({
@@ -14,67 +35,10 @@
             type: "POST",
             data: {destination: destination},
          }).done(function(response) {
-            $.ajax({
-               url: "/plot_map",
-               type: "GET",
-               success: function(html) {
-                  $("#map").append(html);
-               }
-            });
+            window.location.href = "/results";
          });
       }
-   </script>
+    </script>
 
-   <body>
-      <form method="POST" action="/tracemyroute">
-         <div class="container" style="border: 2px soid; max-width: 500px; padding: 20px;">
-            <div class="row mb-3">
-               <div class="col-2"><b>Enter Destination:</b></div>
-               <div class="col-10"><input type="text" id="destination" name="destination" 
-                  placeholder="Enter destination" style="width: 100%;"></div>
-                  <div class="col-2"><b>Enter Source IP (leave blank for default):</b></div>
-                  <div class="col-10"><input type="text" id="source" name="source" 
-                     placeholder="Enter source" style="width: 100%;"></div>
-            </div>
-            <div class="row mb-3">
-               <div class="col-2"><button id="clicked" onclick="draw_map()">Start Trace</button></div>
-            </div>
-         </div>
-
-
-      <div id="streamcontent"></div>
-            
-
-
-        <!-- 
-         <script>
-            function appendToDiv(data) {
-                // Select the div by its ID
-                var div = document.getElementById('streamcontent');
-            
-                // Append the data to the div's innerHTML
-                div.innerHTML += data;
-            }
-            
-            // Make a request to the "/tracemyroute" endpoint using POST
-            fetch('/tracemyroute', {
-                method: 'POST', // Specify the method
-            })
-            .then(response => response.text()) // Handle the response as text
-            .then(data => {
-                // Call the function to append data to the div
-                appendToDiv(data);
-            })
-            .catch(error => console.error('Error:', error));
-        </script>
-          
-         <script>
-            var eventSource = new EventSource("/tracemyroute");
-            eventSource.onmessage = function(event) {
-                // Append new content to the existing content
-                document.getElementById("streamcontent").innerHTML += event.data + "<br>";
-            };
-        </script>
-        -->
-   </body>
+</body>
 </html>
