--- a/templates/results.html
+++ b/templates/results.html
@@ -62,21 +62,27 @@
     </div>
   </div>
   <div id="begin-again">
-    <h2>New Trace?</h2>
-      <p>To start a new trace click the button below</p>
-        <button id="clicked" onclick="start_trace()">New Trace</button>
+    <form method="POST" action="/restart">
+      <h2>New Trace?</h2>
+        <div class="col-2">Enter New Trace Destination:</div>
+          <div class="col-10"><input type="text" id="destination" name="destination" 
+            placeholder="Enter destination" style="width: 75%;" class="form-input"></div>
+            <button id="clicked" onclick="draw_map()">New Trace</button>
+        </div>
+    </form>
   </div>
 
   <script>
-    function start_trace()  {
+    function draw_map()  {
+      var destination = $("#destination").val();
       $.ajax({
         url: "/restart",
         type: "POST",
-        success: function() {
-          window.location.href = "/"
-        }
-      })
-    }
+        data: {destination: destination},
+      }).done(function(response)  {
+        window.location.href= "/results";
+        });
+      }
   </script>
 </body>
 </html>
