--- a/templates/results.html
+++ b/templates/results.html
@@ -67,22 +67,43 @@
         <div class="col-2">Enter New Trace Destination:</div>
           <div class="col-10"><input type="text" id="destination" name="destination" 
             placeholder="Enter destination" style="width: 75%;" class="form-input"></div>
-            <button id="clicked" onclick="draw_map()">New Trace</button>
+            <button id="clicked">New Trace</button>
         </div>
     </form>
   </div>
 
   <script>
+    $.ajaxSetup({
+      cache: false,
+    });
+
     function draw_map()  {
       var destination = $("#destination").val();
       $.ajax({
         url: "/restart",
         type: "POST",
         data: {destination: destination},
+        cache: false,
       }).done(function(response)  {
-        window.location.href= "/results";
+        $.ajax({
+          url: "map.html",
+          cache: false,
+        }).done(function(html)  {
+          $("#map-container").html(html);
         });
-      }
+      });
+    }
+
+    $("#clicked").click(function()  {
+      draw_map();
+    });
   </script>
+
+{% if reload_map %}
+<script>
+  window.location.href = "/map.html";
+</script>
+{% endif %}
+
 </body>
 </html>
