updated url direction to go to / instead of /restart

--- a/templates/error.html
+++ b/templates/error.html
@@ -35,7 +35,7 @@
     <script>
         function start_trace()  {
           $.ajax({
-            url: "/restart",
+            url: "/",
             type: "POST",
             success: function() {
               window.location.href = "/"
