worked through troubleshooting of loading new map and removing cached map

--- a/templates/results.html
+++ b/templates/results.html
@@ -1,4 +1,3 @@
-<!-- Create a new HTML page for the results, e.g., results.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -46,7 +45,7 @@
 <body>
   <div id="map-and-results-container">
     <div id="map-container">
-      {% include "map.html" %}
+      {% include map %}
     </div>
     <div id="results-container">
       <h2>Traceroute Results</h2>
@@ -79,6 +78,7 @@
 
     function draw_map()  {
       var destination = $("#destination").val();
+      var timestamp = new Date().getTime();
       $.ajax({
         url: "/restart",
         type: "POST",
@@ -86,10 +86,20 @@
         cache: false,
       }).done(function(response)  {
         $.ajax({
-          url: "map.html",
+          url: "/plot_map",
+          type: "POST",
+          data: {destination: destination},
           cache: false,
         }).done(function(html)  {
-          $("#map-container").html(html);
+          const element = document.getElementById("map-container");
+          element.innerHTML = map_html;
+          $.ajax({
+            url: "/results",
+            type: "GET",
+            cache: false,
+          }).done(function(html)  {
+            element.innerHTML = html;
+          });
         });
       });
     }
@@ -98,12 +108,5 @@
       draw_map();
     });
   </script>
-
-{% if reload_map %}
-<script>
-  window.location.href = "/map.html";
-</script>
-{% endif %}
-
 </body>
 </html>
