--- a/templates/tracemyroute_results.html
+++ b/templates/tracemyroute_results.html
@@ -39,6 +39,11 @@
       padding: 20px;
       text-align: center;
     }
+    #button {
+      padding: 20px;
+      text-align: center;
+      align-content: center;
+    }
   </style>
 </head>
 
@@ -63,10 +68,10 @@
   <div id="begin-again">
     <form method="POST" action="/restart">
       <h2>New Trace?</h2>
-        <div class="col-2">Enter New Trace Destination:</div>
-          <div class="col-10"><input type="text" id="destination" name="destination" 
-            placeholder="Enter destination" style="width: 75%;" class="form-input"></div>
-            <button id="clicked">New Trace</button>
+        <p>Enter New Trace Destination:</p>
+          <input type="text" id="destination" name="destination" 
+            placeholder="Enter destination" style="width: 75%;" class="form-input">
+            <div id="button"><button id="clicked">New Trace</button></div>
         </div>
     </form>
   </div>
